examples/bad/06_1_no_return_func.soy
def func(a = int) -> int {
    print(a);
    # No return statement
}